--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Request camera permission -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Declare camera feature (optional but recommended) -->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
     <application
         android:name=".BudgetBuddyApplication"
         android:allowBackup="true"
@@ -22,6 +27,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- FileProvider Declaration -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider" 
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" /> 
+        </provider>
+
     </application>
 
 </manifest>
