Enhance CI/CD pipeline by adding unit tests, lint analysis, and instrumented tests to the GitHub Actions workflow. Update build.gradle.kts to include new testing dependencies and configure lint options. Introduce comprehensive unit tests for budget calculations, validation, and category analysis in ExampleUnitTest.kt, improving code quality and test coverage.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,42 +2,182 @@ name: Android CI Build & Test
 
 on:
   push:
-    branches: [ "main" ] # Trigger on pushes to main branch
+    branches: [ "main", "develop" ] # Trigger on pushes to main and develop branches
   pull_request:
-    branches: [ "main" ] # Trigger on pull requests targeting main branch
+    branches: [ "main", "develop" ] # Trigger on pull requests targeting main and develop branches
 
 jobs:
-  build:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4 # Action to check out the code
+      uses: actions/checkout@v4
 
-    - name: Set up JDK 17 # Or your project's required JDK version
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
-        distribution: 'temurin' # Or 'zulu', 'adopt', etc.
-        cache: gradle # Cache Gradle dependencies
+        distribution: 'temurin'
+        cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew # Make the Gradle wrapper executable
+      run: chmod +x gradlew
 
-    - name: Run lint checks (Debug)
-      run: ./gradlew lintDebug # Run Android Lint on the debug variant
+    - name: Run unit tests
+      run: ./gradlew testDebugUnitTest
 
-    - name: Run unit tests (Debug)
-      run: ./gradlew testDebugUnitTest # Run local unit tests for the debug variant
+    - name: Upload unit test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: unit-test-results
+        path: app/build/reports/tests/testDebugUnitTest/
+
+  lint:
+    name: Run Lint Analysis
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Run lint checks
+      run: ./gradlew lintDebug
+
+    - name: Upload lint results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: lint-results
+        path: app/build/reports/lint-results-debug.html
+
+  build:
+    name: Build Debug APK
+    needs: [test, lint]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
     - name: Build debug APK
-      run: ./gradlew assembleDebug # Build the debug version of the app
+      run: ./gradlew assembleDebug
 
-    # Optional: Upload APK artifact (uncomment to enable)
-    # - name: Upload Debug APK
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: budgetbuddy-debug-apk
-    #     path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: budgetbuddy-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
 
- 
+  instrumented-tests:
+    name: Run Instrumented Tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        api-level: [26, 29, 33]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Enable KVM group perms
+      run: |
+        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+        sudo udevadm control --reload-rules
+        sudo udevadm trigger --name-match=kvm
+
+    - name: Run instrumented tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: ${{ matrix.api-level }}
+        target: google_apis
+        arch: x86_64
+        profile: Nexus 6
+        script: ./gradlew connectedDebugAndroidTest --stacktrace
+
+    - name: Upload instrumented test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: instrumented-test-results-api-${{ matrix.api-level }}
+        path: app/build/reports/androidTests/connected/
+
+  code-quality:
+    name: Code Quality Analysis
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Generate test coverage report
+      run: ./gradlew testDebugUnitTestCoverage
+
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: coverage-reports
+        path: app/build/reports/coverage/
+
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Run dependency vulnerability check
+      uses: ossf/scorecard-action@v2.3.1
+      with:
+        results_file: results.sarif
+        results_format: sarif
+        publish_results: false
+
+    - name: Upload SARIF results
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: results.sarif 
