--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
 
@@ -55,11 +55,25 @@ jobs:
         }
         EOF
 
-    - name: Grant execute permission for gradlew
+    - name: Make gradlew executable
       run: chmod +x gradlew
 
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+
+    - name: Clean project
+      run: ./gradlew clean
+
     - name: Run unit tests
-      run: ./gradlew testDebugUnitTest --stacktrace
+      run: ./gradlew testDebugUnitTest --continue --stacktrace
+
+    - name: Verify test results exist
+      run: |
+        if [ ! -d "app/build/reports/tests/testDebugUnitTest" ]; then
+          echo "Test reports directory not found!"
+          exit 1
+        fi
+        echo "✅ Unit tests completed successfully"
 
     - name: Upload unit test results
       uses: actions/upload-artifact@v4
@@ -76,10 +90,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
 
@@ -116,11 +130,22 @@ jobs:
         }
         EOF
 
-    - name: Grant execute permission for gradlew
+    - name: Make gradlew executable
       run: chmod +x gradlew
 
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
+
     - name: Run lint checks
-      run: ./gradlew lintDebug --stacktrace
+      run: ./gradlew lintDebug --continue --stacktrace
+
+    - name: Verify lint results exist
+      run: |
+        if [ ! -f "app/build/reports/lint-results-debug.html" ]; then
+          echo "Lint results file not found!"
+          exit 1
+        fi
+        echo "✅ Lint analysis completed successfully"
 
     - name: Upload lint results
       uses: actions/upload-artifact@v4
@@ -138,10 +163,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
 
@@ -178,11 +203,23 @@ jobs:
         }
         EOF
 
-    - name: Grant execute permission for gradlew
+    - name: Make gradlew executable
       run: chmod +x gradlew
+
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
 
     - name: Build debug APK
       run: ./gradlew assembleDebug --stacktrace
+
+    - name: Verify APK was created
+      run: |
+        if [ ! -f "app/build/outputs/apk/debug/app-debug.apk" ]; then
+          echo "APK file not found!"
+          exit 1
+        fi
+        echo "✅ APK build completed successfully"
+        ls -la app/build/outputs/apk/debug/
 
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
